fix: renombrar clase a etiquetas en styles.css
Renombrar estilos para tablas establecidas como clases a etiquetas table para reutilizar los estilos en cada registro

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -118,21 +118,21 @@ h3{
   font-size: 1.3em;
 }
 
-.tablaRegistroClientes{
+table{
   width: 100%;
   border-collapse: collapse;
   margin-top: 10px;
   background: #f8f8ff;
 }
 
-.tablaRegistroClientes th,
-.tablaRegistroClientes td {
+table th,
+table td {
   border: 1px solid #2d6cdf;
   padding: 8px;
   text-align: center;
 }
 
-.tablaRegistroClientes th {
+table th {
   background-color: #2d6cdf;
   color: #fff;
 }
